--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "firstapp",
-    "slug": "firstapp",
+    "name": "Cat generator",
+    "slug": "CatGen",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/cat.ico",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
@@ -22,12 +22,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/cat.ico",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "nikoolaii.catgen"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/cat.ico"
     }
   }
 }
