--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "expo": "~45.0.0",
+    "expo-downloads-manager": "^1.0.2",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.4",
+    "expo-web-browser": "~10.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-web": "0.17.7",
-    "expo-updates": "~0.13.3"
+    "react-native-webview": "11.18.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
